[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/LevelBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/images/ScienceFloor1.png" type="Texture" id=2]
[ext_resource path="res://assets/images/ScienceFloor2.png" type="Texture" id=3]
[ext_resource path="res://scenes/levels/SpaceLevel.gd" type="Script" id=4]
[ext_resource path="res://scenes/CameraTransferPoint.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/SpawningDoor.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/GreenHauntedBall.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/FlameEnemy1.tscn" type="PackedScene" id=8]
[ext_resource path="res://resources/levels/ScienceLevel2.tres" type="Resource" id=9]
[ext_resource path="res://scenes/SpikeTrap.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/LightTrigger.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/GismoTrigger.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/images/ScienceFloor3.png" type="Texture" id=14]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.322418, 1 )
colors = PoolColorArray( 0, 0, 0, 0.843137, 0, 0, 0, 0.784314, 0, 0, 0, 0.282353 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 256

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 32.2699 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 27.5342, 9.5844 )

[node name="SpaceLevel" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="Floor" parent="." index="0"]
position = Vector2( 0, 45 )
scale = Vector2( -1, 0.431 )
texture = ExtResource( 3 )

[node name="LeftFloor" type="Sprite" parent="." index="1"]
show_behind_parent = true
position = Vector2( -255, 45 )
scale = Vector2( 1, 0.43138 )
texture = ExtResource( 2 )
flip_h = true

[node name="RightFloor" type="Sprite" parent="." index="2"]
position = Vector2( 255, 45 )
scale = Vector2( 1, 0.431 )
texture = ExtResource( 14 )
flip_h = true

[node name="Left" parent="." index="6"]
position = Vector2( -384.852, 44.8378 )

[node name="Right" parent="." index="7"]
position = Vector2( 383.639, 43.905 )

[node name="Camera2D" parent="." index="8"]
position = Vector2( -255, 0 )
smoothing_enabled = true
smoothing_speed = 2.0

[node name="MidToLeft" parent="." index="10" instance=ExtResource( 5 )]
position = Vector2( 130, 43.694 )
TransferToPoint = NodePath("../LeftCameraPosition")

[node name="RightToMid" parent="." index="11" instance=ExtResource( 5 )]
position = Vector2( -127, 43.636 )
rotation = 3.14159
TransferToPoint = NodePath("../CenterCameraPosition")

[node name="LeftCameraPosition" type="Position2D" parent="." index="12"]
position = Vector2( 255, 0 )

[node name="CenterCameraPosition" type="Position2D" parent="." index="13"]

[node name="RightCameraPosition" type="Position2D" parent="." index="14"]
position = Vector2( -255, 0 )

[node name="StartPosition" parent="." index="15"]
position = Vector2( -371.444, 44.8426 )

[node name="SpawningDoor" parent="." index="16" instance=ExtResource( 6 )]
position = Vector2( -94.3868, 22.6089 )
EnemiesToSpawn = [ ExtResource( 7 ), ExtResource( 7 ), ExtResource( 7 ) ]
SpawnTimes = [ 0.5, 1.0, 1.0 ]

[node name="SpawningDoor2" parent="." index="17" instance=ExtResource( 6 )]
position = Vector2( -19.7554, 65.6318 )
EnemiesToSpawn = [ ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ) ]
SpawnTimes = [ 1.0, 0.5, 1.0 ]

[node name="LevelExit" parent="." index="18"]
position = Vector2( 368.941, 43.9855 )
ConnectedLevel = ExtResource( 9 )

[node name="SpikeTrap" parent="." index="19" instance=ExtResource( 10 )]
position = Vector2( 261.035, -17.6058 )
scale = Vector2( -1, 1 )

[node name="SpikeTrap2" parent="." index="20" instance=ExtResource( 10 )]
position = Vector2( 289.959, 16.8326 )
scale = Vector2( -1, 1 )

[node name="Darkness" type="Sprite" parent="." index="21"]
position = Vector2( 2.87444, 173.059 )
scale = Vector2( 3.09407, 368.263 )
z_index = 1
texture = SubResource( 2 )
flip_h = true

[node name="LightTrigger" parent="." index="22" instance=ExtResource( 11 )]
position = Vector2( 228.639, 44.8227 )
z_index = 1

[node name="CollisionShape2D" parent="LightTrigger" index="0"]
shape = SubResource( 3 )

[node name="Light2D" parent="LightTrigger" index="1"]
position = Vector2( 132.944, -83.5785 )
z_index = 1
energy = 10.0
range_layer_min = -110
range_layer_max = 10
shadow_color = Color( 0.0156863, 0, 0.192157, 1 )

[node name="CPUParticles2D" parent="LightTrigger/Light2D" index="0"]
show_behind_parent = true

[node name="GismoTrigger" parent="." index="23" instance=ExtResource( 12 )]
position = Vector2( -292.232, 44.7689 )
GismoText = "Whooa, 0h BLACK B3TTY .........ABALAM"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="24"]
position = Vector2( -124.68, 44.3519 )
rotation = 1.5708
shape = SubResource( 4 )
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="." index="25"]
position = Vector2( 173.88, 44.3519 )
rotation = 1.5708
shape = SubResource( 4 )
one_way_collision = true

[connection signal="area_entered" from="RightToMid" to="." method="_on_RightToMid_area_entered" flags=6]
[connection signal="body_entered" from="LightTrigger" to="LightTrigger" method="_on_PlayerTrigger_body_entered" flags=6]
[connection signal="body_entered" from="GismoTrigger" to="GismoTrigger" method="_on_PlayerTrigger_body_entered" flags=6]

[editable path="LightTrigger"]
